<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetupDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="material_widgets">Material Widgets</string>
    <string name="reveal_effect">Reveal Effect</string>
    <string name="shared_elements">Shared Elements</string>
    <string name="web_view">Decoupled Web View</string>
    <string name="enhanced_notifications">Enhanced Notifications</string>
    <string name="screen_capture">Screen Capture</string>
    <string name="screen_pinning">Screen Pinning</string>
    <string name='show_notification'>Show Notification</string>
    <string name='show_enhanced_notification'>Show Enhanced Notification</string>
    <string name="text_box">Text box</string>
    <string name="button">Button</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="check_box">Check box</string>
    <string name="switch_toggle">Switch</string>
    <string name="toggle">Toggle</string>
    <string name="reveal">Reveal</string>
    <string name="capture_screen">Capture screen</string>
    <string name="pin_screen">Pin screen</string>

    <string-array name="spinner_options">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
        <item>Option 5</item>
    </string-array>

    <string name="title_activity_shared_element">SharedElementActivity</string>
    <string name="shared_fab">fab</string>
    <string name="shared_layout">layout</string>
    <string name="shared_title">title</string>

</resources>
